--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="enemy_name">Enemy name</string>
     <string name="type_of_match">Type of match</string>
     <string name="date_of_match">Date of match</string>
+    <string name="team">Команда</string>
 </resources>
